Closed Bug 503639 Opened 16 years ago Closed 16 years ago

[Mac OS X] Right-click on menu from folder from bookmark bar triggers context menu

Categories

(Core :: XUL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: phiw2, Assigned: smaug)

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

STR 1. put a folder containing bookmarks on the bookmark bar 2. click on that folder --> menu with list of bookmarks appears 3. (accidentally) right-click on that menu Actual results: a context menu is triggered Expected results: right click is disabled, registered as normal click This is the normal Mac OS X UI behaviour. regression between 20090622 and 20090623 http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=7c96ea5e9df1&tochange=28aa23105a9e --> bug 486990 probably
Summary: Right-click on menu from folder from bookmark bar triggers context menu → [Mac OS X] Right-click on menu from folder from bookmark bar triggers context menu
Attached patch a patch (obsolete) — Splinter Review
Neil, what do you think about this approach. Mouse generated context menu and key generated context menu should be handled in the same way. This clearly requires a mochitest.
Assignee: nobody → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #388509 - Flags: review?(enndeakin)
Attachment #388509 - Flags: review?(enndeakin)
Comment on attachment 388509 [details] [diff] [review] a patch Apparently this is wrong. Though, I'm not quite sure what is the right thing to do.
...because I'm not sure what is the normal behavior on OSX.
Flags: blocking1.9.2?
Attached patch patchSplinter Review
This way then. Keyboard-contextmenu event is prevented like before, but normal contextmenu only if the event is targeted somewhere in a menu popup.
Attachment #388509 - Attachment is obsolete: true
Attachment #394010 - Flags: review?(enndeakin)
Comment on attachment 394010 [details] [diff] [review] patch Looks ok. It would be nice to combine the code so as not to call GetTopPopup twice.
Attachment #394010 - Flags: review?(enndeakin) → review+
Yeah, perhaps. Though having two different methods keeps them reasonable small and well defined. And GetTopPopup shouldn't be too slow to call.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Thanks ! Verified with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a2pre) Gecko/20090813 Minefield/3.6a2pre and Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.3a1pre) Gecko/20090814 Minefield/3.7a1pre (and removing the blocking request)
Status: RESOLVED → VERIFIED
Flags: blocking1.9.2?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: