 Bug 503639 -  [Mac OS X] Right-click on menu from folder from bookmark bar triggers context menu, r=enn